<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/sv_fragment_add_story"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="8dp"
  tools:context=".ui.story.AddStoryFragment">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
      android:id="@+id/iv_image"
      android:layout_width="wrap_content"
      android:layout_height="279dp"
      android:contentDescription="@string/story_image"
      android:src="@drawable/placeholder" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginVertical="16dp"
      android:orientation="horizontal"
      android:padding="8dp">

      <Button
        android:id="@+id/btn_camera"
        style="?android:attr/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        android:text="@string/camera"
        android:textColor="@color/white" />

      <Button
        android:id="@+id/btn_gallery"
        style="?android:attr/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        android:text="@string/gallery"
        android:textColor="@color/white" />
    </LinearLayout>

    <EditText
      android:id="@+id/ed_add_description"
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:background="@drawable/rounded_edittext"
      android:gravity="top|start"
      android:hint="@string/description"
      android:importantForAutofill="no"
      android:inputType="textMultiLine|textCapSentences"
      android:maxLines="5"
      android:padding="16dp"
      android:scrollbars="vertical"
      android:visibility="visible" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:orientation="horizontal">

      <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:switchPadding="8dp"
        android:text="@string/guest_mode"
        android:textSize="18sp" />

      <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

      <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:switchPadding="8dp"
        android:text="@string/location"
        android:textSize="18sp" />

    </LinearLayout>

    <dev.erhahahaa.storyapp.ui.customview.Button
      android:id="@+id/button_add"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:enabled="false"
      android:text="@string/upload" />

  </LinearLayout>
</ScrollView>